--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Hej Alica 💕</h1>
+    <h1>Hej Alicia 💕</h1>
     <p id="questionText">Jag har en viktig fråga till dig...</p>
 
     <img src="banana-cat.png" alt="Söt katt i banan" />
@@ -129,7 +129,7 @@
     </div>
 
     <div id="success" class="hidden">
-      <p>YAAAY Alica!!! Jag älskar dig jättemycket 😍💞</p>
+      <p>YAAAY Alicia!!! Jag älskar dig jättemycket 😍💞</p>
       <div class="big-heart">💗</div>
       <p>Vår dejt börjar nu! 🕔✨</p>
     </div>
