--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vill du bli min Valentine, Alica? 💖</title>
+  <title>Vill du bli min Valentine, Alicia? 💖</title>
   <style>
     body {
       margin: 0;
